Modifying code to fix signup error